--- a/alsogoobers.html
+++ b/alsogoobers.html
@@ -3,7 +3,6 @@
 <html>
 
 <head>
-<link rel="stylesheet" href="https://use.typekit.net/jgn6mct.css">
 <title> Hey guys!! </title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -80,7 +79,7 @@ footer {
 <section>
   <nav>
     <ul>
-      <li><a href="index.html">Goober</a></li>
+      <li><a href="silly website.html">Goober</a></li>
       <li><a href="alsogoobers.html">Also Goober</a></li>
       <li><a href="fontsize.html">Even more Goober</a></li>
 	  <li><a href="bee.html">Bee</a></li>
@@ -90,7 +89,49 @@ footer {
     <article>
     <h1>Welcome to the [Section 2]</h1>
 	<p> Hello this is section 2 enjoy your stay. </p>	
+	
+	
+	    <section class="photo-grid">
 
+        <!-- <iframe class="card latestVideoEmbed" vnum='0' cid="UCErq0Ms_zWefj4MQVuNuXCA" width="600" height="340" frameborder="0" allowfullscreen></iframe> -->
+        <!-- <iframe class="card latestVideoEmbed" vnum='1' cid="UCErq0Ms_zWefj4MQVuNuXCA" width="600" height="340" frameborder="0" allowfullscreen></iframe> -->
+        <!-- <iframe class="card latestVideoEmbed" vnum='2' cid="UCErq0Ms_zWefj4MQVuNuXCA" width="600" height="340" frameborder="0" allowfullscreen></iframe> -->
+        <!-- <iframe class="card latestVideoEmbed" vnum='3' cid="UCErq0Ms_zWefj4MQVuNuXCA" width="600" height="340" frameborder="0" allowfullscreen></iframe> -->
+        <!-- <iframe class="card latestVideoEmbed" vnum='4' cid="UCErq0Ms_zWefj4MQVuNuXCA" width="600" height="340" frameborder="0" allowfullscreen></iframe> -->
+        <!-- <iframe class="card latestVideoEmbed" vnum='5' cid="UCErq0Ms_zWefj4MQVuNuXCA" width="600" height="340" frameborder="0" allowfullscreen></iframe> -->
+
+        <div class="card">
+            <a href="" class="latestVideoEmbed" vnum='0' cid="UCErq0Ms_zWefj4MQVuNuXCA">
+                <img class="latestVideoEmbed" vnum='0' cid="UCErq0Ms_zWefj4MQVuNuXCA" width="600" height="340" frameborder="0" allowfullscreen></img>
+            </a>
+        </div>
+        <div class="card">
+            <a href="" class="latestVideoEmbed" vnum='1' cid="UCErq0Ms_zWefj4MQVuNuXCA">
+                <img class="latestVideoEmbed" vnum='1' cid="UCErq0Ms_zWefj4MQVuNuXCA" width="600" height="340" frameborder="0" allowfullscreen></img>
+            </a>
+        </div>
+        <div class="card">
+            <a href="" class="latestVideoEmbed" vnum='2' cid="UCErq0Ms_zWefj4MQVuNuXCA">
+                <img class="latestVideoEmbed" vnum='2' cid="UCErq0Ms_zWefj4MQVuNuXCA" width="600" height="340" frameborder="0" allowfullscreen></img>
+            </a>
+        </div>
+        <div class="card">
+            <a href="" class="latestVideoEmbed" vnum='3' cid="UCErq0Ms_zWefj4MQVuNuXCA">
+                <img class="latestVideoEmbed" vnum='3' cid="UCErq0Ms_zWefj4MQVuNuXCA" width="600" height="340" frameborder="0" allowfullscreen></img>
+            </a>
+        </div>
+        <div class="card">
+            <a href="" class="latestVideoEmbed" vnum='4' cid="UCErq0Ms_zWefj4MQVuNuXCA">
+                <img class="latestVideoEmbed" vnum='4' cid="UCErq0Ms_zWefj4MQVuNuXCA" width="600" height="340" frameborder="0" allowfullscreen></img>
+            </a>
+        </div>
+        <div class="card">
+            <a href="" class="latestVideoEmbed" vnum='5' cid="UCErq0Ms_zWefj4MQVuNuXCA">
+                <img class="latestVideoEmbed" vnum='5' cid="UCErq0Ms_zWefj4MQVuNuXCA" width="600" height="340" frameborder="0" allowfullscreen></img>
+            </a>
+        </div>
+
+    </section>
   </article>
 </section>
 
