--- a/alsogoobers.html
+++ b/alsogoobers.html
@@ -3,6 +3,12 @@
 <html>
 
 <head>
+    <link rel="stylesheet" href="base.css" type="text/css">
+    <link rel="stylesheet" href="photo-grid.css" type="text/css">
+
+    <script src="TypeWriter.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <script src="YTVideoThing.js"></script>
 <title> Hey guys!! </title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -79,7 +85,7 @@ footer {
 <section>
   <nav>
     <ul>
-      <li><a href="silly website.html">Goober</a></li>
+      <li><a href="index.html">Goober</a></li>
       <li><a href="alsogoobers.html">Also Goober</a></li>
       <li><a href="fontsize.html">Even more Goober</a></li>
 	  <li><a href="bee.html">Bee</a></li>
