Test Commit, fixed the YouTube video stuff on alsogoobers.html. Also organized some files

--- a/alsogoobers.html
+++ b/alsogoobers.html
@@ -3,13 +3,15 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="base.css" type="text/css">
-    <link rel="stylesheet" href="photo-grid.css" type="text/css">
 
-    <script src="TypeWriter.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-    <script src="YTVideoThing.js"></script>
-<title> Hey guys!! </title>
+<link rel="stylesheet" href="assets/css/fireship/base.css" type="text/css">
+<link rel="stylesheet" href="assets/css/fireship/photo-grid.css" type="text/css">
+
+<script src="assets/js/YTVideoThing.js"></script>
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://use.typekit.net/jgn6mct.css">
+    <title> Hey guys!! </title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
@@ -99,41 +101,34 @@ footer {
 	
 	    <section class="photo-grid">
 
-        <!-- <iframe class="card latestVideoEmbed" vnum='0' cid="UCErq0Ms_zWefj4MQVuNuXCA" width="600" height="340" frameborder="0" allowfullscreen></iframe> -->
-        <!-- <iframe class="card latestVideoEmbed" vnum='1' cid="UCErq0Ms_zWefj4MQVuNuXCA" width="600" height="340" frameborder="0" allowfullscreen></iframe> -->
-        <!-- <iframe class="card latestVideoEmbed" vnum='2' cid="UCErq0Ms_zWefj4MQVuNuXCA" width="600" height="340" frameborder="0" allowfullscreen></iframe> -->
-        <!-- <iframe class="card latestVideoEmbed" vnum='3' cid="UCErq0Ms_zWefj4MQVuNuXCA" width="600" height="340" frameborder="0" allowfullscreen></iframe> -->
-        <!-- <iframe class="card latestVideoEmbed" vnum='4' cid="UCErq0Ms_zWefj4MQVuNuXCA" width="600" height="340" frameborder="0" allowfullscreen></iframe> -->
-        <!-- <iframe class="card latestVideoEmbed" vnum='5' cid="UCErq0Ms_zWefj4MQVuNuXCA" width="600" height="340" frameborder="0" allowfullscreen></iframe> -->
-
         <div class="card">
-            <a href="" class="latestVideoEmbed" vnum='0' cid="UCErq0Ms_zWefj4MQVuNuXCA">
-                <img class="latestVideoEmbed" vnum='0' cid="UCErq0Ms_zWefj4MQVuNuXCA" width="600" height="340" frameborder="0" allowfullscreen></img>
+            <a href="" class="latestVideoEmbed" vnum='0' cid="UCScq_TZu8x-Zpa4w7dSIkHg">
+                <img class="latestVideoEmbed" vnum='0' cid="UCScq_TZu8x-Zpa4w7dSIkHg" width="600" height="340" frameborder="0" allowfullscreen></img>
             </a>
         </div>
         <div class="card">
-            <a href="" class="latestVideoEmbed" vnum='1' cid="UCErq0Ms_zWefj4MQVuNuXCA">
-                <img class="latestVideoEmbed" vnum='1' cid="UCErq0Ms_zWefj4MQVuNuXCA" width="600" height="340" frameborder="0" allowfullscreen></img>
+            <a href="" class="latestVideoEmbed" vnum='1' cid="UCScq_TZu8x-Zpa4w7dSIkHg">
+                <img class="latestVideoEmbed" vnum='1' cid="UCScq_TZu8x-Zpa4w7dSIkHg" width="600" height="340" frameborder="0" allowfullscreen></img>
             </a>
         </div>
         <div class="card">
-            <a href="" class="latestVideoEmbed" vnum='2' cid="UCErq0Ms_zWefj4MQVuNuXCA">
-                <img class="latestVideoEmbed" vnum='2' cid="UCErq0Ms_zWefj4MQVuNuXCA" width="600" height="340" frameborder="0" allowfullscreen></img>
+            <a href="" class="latestVideoEmbed" vnum='2' cid="UCScq_TZu8x-Zpa4w7dSIkHg">
+                <img class="latestVideoEmbed" vnum='2' cid="UCScq_TZu8x-Zpa4w7dSIkHg" width="600" height="340" frameborder="0" allowfullscreen></img>
             </a>
         </div>
         <div class="card">
-            <a href="" class="latestVideoEmbed" vnum='3' cid="UCErq0Ms_zWefj4MQVuNuXCA">
-                <img class="latestVideoEmbed" vnum='3' cid="UCErq0Ms_zWefj4MQVuNuXCA" width="600" height="340" frameborder="0" allowfullscreen></img>
+            <a href="" class="latestVideoEmbed" vnum='3' cid="UCScq_TZu8x-Zpa4w7dSIkHg">
+                <img class="latestVideoEmbed" vnum='3' cid="UCScq_TZu8x-Zpa4w7dSIkHg" width="600" height="340" frameborder="0" allowfullscreen></img>
             </a>
         </div>
         <div class="card">
-            <a href="" class="latestVideoEmbed" vnum='4' cid="UCErq0Ms_zWefj4MQVuNuXCA">
-                <img class="latestVideoEmbed" vnum='4' cid="UCErq0Ms_zWefj4MQVuNuXCA" width="600" height="340" frameborder="0" allowfullscreen></img>
+            <a href="" class="latestVideoEmbed" vnum='4' cid="UCScq_TZu8x-Zpa4w7dSIkHg">
+                <img class="latestVideoEmbed" vnum='4' cid="UCScq_TZu8x-Zpa4w7dSIkHg" width="600" height="340" frameborder="0" allowfullscreen></img>
             </a>
         </div>
         <div class="card">
-            <a href="" class="latestVideoEmbed" vnum='5' cid="UCErq0Ms_zWefj4MQVuNuXCA">
-                <img class="latestVideoEmbed" vnum='5' cid="UCErq0Ms_zWefj4MQVuNuXCA" width="600" height="340" frameborder="0" allowfullscreen></img>
+            <a href="" class="latestVideoEmbed" vnum='5' cid="UCScq_TZu8x-Zpa4w7dSIkHg">
+                <img class="latestVideoEmbed" vnum='5' cid="UCScq_TZu8x-Zpa4w7dSIkHg" width="600" height="340" frameborder="0" allowfullscreen></img>
             </a>
         </div>
 
