--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 	<div class="w3-bar w3-black">
 		<a href="silly website.html" class="w3-bar-block w3-button">Home</a> 
-		<a href="alsogoobers.html" class="w3-bar-block w3-button">Form</a>
+		<a href="formtest.html" class="w3-bar-block w3-button">Form</a>
 		<a href="fontsize.html" class="w3-bar-block w3-button">Silly Button</a>
 	</div> 
 	
