--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <section>
   <nav>
 		<ul>
-			<li><a href="silly website.html">Goober</a></li>
+			<li><a href="index.html">Goober</a></li>
 			<li><a href="alsogoobers.html">Also Goober</a></li>
 			<li><a href="fontsize.html">Even more Goober</a></li>
 			<li><a href="bee.html">Bee</a></li>
