--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 <title> Hey guys!! </title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="description" content="This is a web page about goobers">
+<meta name="keywords" content="goober, auston, austonbluboy, qwertyuiopasdfghjklzxcvbnm, kdfsjleaiownafd, hjkaueia, uieabneyian, gihodg, lfdsafjldksa, fjdkfjkdjfkd" />
+<meta name="author" content="AustonBluBoy" />
 </head>
 <body>
 <header>
@@ -16,7 +19,7 @@
 </header> 
 
 	<div class="w3-bar w3-black">
-		<a href="silly website.html" class="w3-bar-block w3-button">Home</a> 
+		<a href="index.html" class="w3-bar-block w3-button">Home</a> 
 		<a href="formtest.html" class="w3-bar-block w3-button">Form</a>
 		<a href="fontsize.html" class="w3-bar-block w3-button">Silly Button</a>
 	</div> 
