--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<div class="w3-bar w3-black">
 		<a href="index.html" class="w3-bar-block w3-button">Home</a> 
 		<a href="formtest.html" class="w3-bar-block w3-button">Form</a>
-		<a href="fontsize.html" class="w3-bar-block w3-button">Silly Button</a>
+		<a href="silly website.html" class="w3-bar-block w3-button">Silly Button</a>
 	</div> 
 	
 <section>
