--- a/formtest.html
+++ b/formtest.html
@@ -16,9 +16,9 @@
 </header> 
 
 	<div class="w3-bar w3-black">
-		<a href="silly website.html" class="w3-bar-block w3-button">Home</a> 
+		<a href="index.html" class="w3-bar-block w3-button">Home</a> 
 		<a href="alsogoobers.html" class="w3-bar-block w3-button">Form</a>
-		<a href="fontsize.html" class="w3-bar-block w3-button">Silly Button</a>
+		<a href="silly website.html" class="w3-bar-block w3-button">Silly Button</a>
 	</div> 
 	
 <section>
