--- a/goobers.html
+++ b/goobers.html
@@ -34,7 +34,7 @@
 			<div class="row">
 				<div class="column">
 					<div class="card">
-						<img src="sunsun.png" alt="Sun Sun"  vnum='0' width="348" height="336" frameborder="0" allowfullscreen></img>
+						<img src="sunsun.png" alt="Sun Sun" class="latestVideoEmbed" vnum='0' cid="UCScq_TZu8x-Zpa4w7dSIkHg" width="348" height="336" frameborder="0" allowfullscreen></img>
 					</div>
 				</div>
 				<div class="column">
@@ -43,7 +43,7 @@
 					</div>
 				</div>
 				<div class="column">
-					<img src="yippee.png" alt="tbh" style="width:100%">
+					<img src="yippee.png" alt="tbh" class="latestVideoEmbed" vnum='2' cid="UCScq_TZu8x-Zpa4w7dSIkHg" width="348" height="336" frameborder="0" allowfullscreen></img>
 				</div>
 			</div> 
 			<div class="card">
