--- a/formtest.html
+++ b/formtest.html
@@ -9,29 +9,27 @@
 <title> Hey guys!! </title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="description" content="This is a web page about goobers">
+<meta name="keywords" content="goober, auston, austonbluboy, qwertyuiopasdfghjklzxcvbnm, kdfsjleaiownafd, hjkaueia, uieabneyian, gihodg, lfdsafjldksa, fjdkfjkdjfkd" />
+<meta name="author" content="AustonBluBoy" />
 </head>
 <body>
-<header>
-<h1> The Goober Form </h1>
-</header> 
 
-	<div class="w3-bar w3-black">
-		<a href="index.html" class="w3-bar-block w3-button">Home</a> 
-		<a href="alsogoobers.html" class="w3-bar-block w3-button">Form</a>
-		<a href="silly website.html" class="w3-bar-block w3-button">Silly Button</a>
-	</div> 
-	
-<section>
-  <nav>
-		<ul>
-			<li><a href="silly website.html">Goober</a></li>
-			<li><a href="alsogoobers.html">Also Goober</a></li>
-			<li><a href="fontsize.html">Even more Goober</a></li>
-			<li><a href="bee.html">Bee</a></li>
-		</ul>
-  </nav>
-  
-    <article>
+	<header>
+	<h1> The Goober Site</h1>
+	</header> 
+
+		<div class="w3-bar w3-black">
+			<a href="index.html" class="w3-bar-block w3-button">Home</a> 
+			<a href="formtest.html" class="w3-bar-block w3-button">Form</a>
+			<a href="goobers.html" class="w3-bar-block w3-button">Goobers</a>
+			<a href="silly website.html" class="w3-bar-block w3-button">Silly Button</a>
+			<span class="w3-bar-block w3-button" onclick="openNav()">More...</span>
+		</div> 
+
+<div id="main">
+			<article>
+				   <article>
     <h1>Hello, Goober!</h1>
 <form action="" method="">
 <!-- Input elements go in here -->
@@ -107,7 +105,27 @@ Comments: <br>
 </form>
 
   </article>
-</section>
+</div>
+
+<div id="mySidenav" class="sidenav">
+  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+			<a href="index.html">Goober</a>
+			<a href="alsogoobers.html">Also Goober</a>
+			<a href="fontsize.html">Even more Goober</a>
+			<a href="bee.html">Bee</a>
+</div>
+
+<script>
+function openNav() {
+  document.getElementById("mySidenav").style.width = "250px";
+  document.getElementById("main").style.marginLeft = "250px";
+}
+
+function closeNav() {
+  document.getElementById("mySidenav").style.width = "0";
+  document.getElementById("main").style.marginLeft= "0";
+}
+</script>
 
 <footer>
   <p>Goobers have stopped here :3</p>
