--- a/goobers.html
+++ b/goobers.html
@@ -6,6 +6,7 @@
 <link rel="stylesheet" href="w3.css">
 <link rel="stylesheet" href="https://use.typekit.net/jgn6mct.css">
 <link rel="stylesheet" href="styles.css"> 
+<link rel="stylesheet" href="goober.css"> 
 <title> Hey guys!! </title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
