--- a/goobers.html
+++ b/goobers.html
@@ -6,6 +6,7 @@
 <link rel="stylesheet" href="w3.css">
 <link rel="stylesheet" href="https://use.typekit.net/jgn6mct.css">
 <link rel="stylesheet" href="styles.css"> 
+<link rel="stylesheet" href="goober.css"> 
 <title> Hey guys!! </title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -27,6 +28,13 @@
 			<span class="w3-bar-block w3-button" onclick="openNav()">More...</span>
 		</div> 
 
+<div id="mySidenav" class="sidenav">
+  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+			<a href="index.html">Goober</a>
+			<a href="alsogoobers.html">Also Goober</a>
+			<a href="fontsize.html">Even more Goober</a>
+			<a href="bee.html">Bee</a>
+</div>
 
 <div id="main">
 	<article>
@@ -50,14 +58,6 @@
 			</div> 
 		</section>
 	</article>
-</div>
-
-<div id="mySidenav" class="sidenav">
-  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-			<a href="index.html">Goober</a>
-			<a href="alsogoobers.html">Also Goober</a>
-			<a href="fontsize.html">Even more Goober</a>
-			<a href="bee.html">Bee</a>
 </div>
 
 <script>
