--- a/formtest.html
+++ b/formtest.html
@@ -37,7 +37,6 @@
 
 <div id="main">
 			<article>
-				   <article>
     <h1>Hello, Goober!</h1>
 <form action="" method="">
 <!-- Input elements go in here -->
@@ -102,12 +101,9 @@ Comments: <br>
 <textarea rows="10" cols="40"> </textarea>
 <br> <br>
 <input type="submit" value="Send"> <br>
-
-
-
-
-
-
+<br><br>
+<br><br>
+<br><br>
 
 
 </form>
@@ -119,11 +115,13 @@ Comments: <br>
 function openNav() {
   document.getElementById("mySidenav").style.width = "250px";
   document.getElementById("main").style.marginLeft = "250px";
+  document.getElementById("mySidenav").style.height = "1050px";
 }
 
 function closeNav() {
   document.getElementById("mySidenav").style.width = "0";
   document.getElementById("main").style.marginLeft= "0";
+  document.getElementById("mySidenav").style.height = "1050px";
 }
 </script>
 
