--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@ function closeNav() {
   document.getElementById("main").style.marginLeft= "0";
 }
 </script>
+</body>
 
 <footer>
   <p>Goobers have stopped here :3</p>
