--- a/goobers.html
+++ b/goobers.html
@@ -42,12 +42,16 @@
 			<div class="row">
 				<div class="column">
 					<div class="card">
+						<a href="sunsun.html">
 						<img src="sunsun.png" alt="Sun Sun" class="latestVideoEmbed" vnum='0' cid="UCScq_TZu8x-Zpa4w7dSIkHg" width="348" height="336" frameborder="0" allowfullscreen></img>
+						</a>
 					</div>
 				</div>
 				<div class="column">
 					<div class="card">
+						<a href="sewaddle.html">
 						<img src="sewaddle.png" alt="Sewaddle" class="latestVideoEmbed" vnum='1' cid="UCScq_TZu8x-Zpa4w7dSIkHg" width="348" height="336" frameborder="0" allowfullscreen></img>
+						</a>
 					</div>
 				</div>
 				<div class="column">
