--- a/fontsize.html
+++ b/fontsize.html
@@ -3,111 +3,81 @@
 <html>
 
 <head>
+<link rel="stylesheet" href="w3.css">
 <link rel="stylesheet" href="https://use.typekit.net/jgn6mct.css">
+<link rel="stylesheet" href="styles.css"> 
 <title> Hey guys!! </title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-* {
-  box-sizing: border-box;
-}
-
-body {
-  font-family: sniglet, sans-serif;
-}
-
-
-header {
-  background-color: #18b2ff;
-  padding: 30px;
-  text-align: center;
-  font-size: 35px;
-  color: white;
-}
-
-/* Create two columns/boxes that floats next to each other */
-nav {
-  float: left;
-  width: 15%;
-  height: 700px; /* only for demonstration, should be removed */
-  background: #ccc;
-  padding: 20px;
-}
-
-/* Style the list inside the menu */
-nav ul {
-  list-style-type: none;
-  padding: 0;
-}
-
-article {
-  float: left;
-  padding: 20px;
-  width: 70%;
-  background-color: #f1f1f1;
-  height: 700px; /* only for demonstration, should be removed */
-}
-
-/* Clear floats after the columns */
-section::after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-/* Style the footer */
-footer {
-  background-color: #777;
-  padding: 10px;
-  text-align: center;
-  color: white;
-}
-
-/* Responsive layout - makes the two columns/boxes stack on top of each other instead of next to each other, on small screens */
-@media (max-width: 600px) {
-  nav, article {
-    width: 100%;
-    height: auto;
-  }
-}
-</style>
+<meta name="description" content="This is a web page about goobers">
+<meta name="keywords" content="goober, auston, austonbluboy, qwertyuiopasdfghjklzxcvbnm, kdfsjleaiownafd, hjkaueia, uieabneyian, gihodg, lfdsafjldksa, fjdkfjkdjfkd" />
+<meta name="author" content="AustonBluBoy" />
 </head>
 <body>
-<header>
-<div align="center"><h1>Look at all these fonts</h1></div>
-</header> 
 
-<section>
-  <nav>
-    <ul>
-      <li><a href="index.html">Goober</a></li>
-      <li><a href="alsogoobers.html">Also Goober</a></li>
-      <li><a href="fontsize.html">Even more Goober</a></li>
-	  <li><a href="bee.html">Bee</a></li>
-    </ul>
-  </nav>
-  
-    <article>
-    <font size="7"> Am very big </font>
-	<br>
-	<font size="6"> Am kinda big </font>
-	<br>
-	<font size="5"> Am big </font>
-	<br>
-	<font size="4"> Am slightly big </font>
-	<br>
-	<font size="3"> oh nu </font>
-	<br>
-	<font size="2"> NOO </font>
-	<br>
-	<font size="1"> AAAAAA </font>
-	<br>
-	<p> teehee </p>	
+	<header>
+	<h1> The Goober Site</h1>
+	</header> 
 
+		<div class="w3-bar w3-black">
+			<a href="index.html" class="w3-bar-block w3-button">Home</a> 
+			<a href="formtest.html" class="w3-bar-block w3-button">Form</a>
+			<a href="goobers.html" class="w3-bar-block w3-button">Goobers</a>
+			<a href="silly website.html" class="w3-bar-block w3-button">Silly Button</a>
+			<span class="w3-bar-block w3-button" onclick="openNav()">More...</span>
+		</div> 
+
+<div id="mySidenav" class="sidenav">
+  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+			<a href="index.html">Goober</a>
+			<a href="alsogoobers.html">Also Goober</a>
+			<a href="fontsize.html">Even more Goober</a>
+			<a href="bee.html">Bee</a>
+</div>
+
+<div id="main">
+			<article>
+					<audio autoplay>
+						<source src="fish.mp3" type="audio/mpeg">
+						Your browser does not support the audio tag.
+					</audio> 
+				<p><img src="https://media.tenor.com/R5IECfIf34YAAAAd/fish-spinning.gif" alt="fish"> </p>
+					
   </article>
-</section>
+</div>
+
+<script>
+function openNav() {
+  document.getElementById("mySidenav").style.width = "250px";
+  document.getElementById("main").style.marginLeft = "250px";
+}
+
+function closeNav() {
+  document.getElementById("mySidenav").style.width = "0";
+  document.getElementById("main").style.marginLeft= "0";
+}
+</script>
+</body>
 
 <footer>
   <p>Goobers have stopped here :3</p>
 </footer>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 </html>
