--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
 			<a href="index.html">Goober</a>
 			<a href="alsogoobers.html">Also Goober</a>
-			<a href="fontsize.html">Even more Goober</a>
+			<a href="tetris.html">Tetris</a>
+			<a href="fontsize.html">Fish</a>
 			<a href="bee.html">Bee</a>
 </div>
 
