--- a/sewaddle.html
+++ b/sewaddle.html
@@ -31,6 +31,7 @@
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
 			<a href="index.html">Goober</a>
 			<a href="alsogoobers.html">Also Goober</a>
+			<a href="tetris.html">Tetris</a>
 			<a href="fontsize.html">Fish</a>
 			<a href="bee.html">Bee</a>
 </div>
