--- a/snake.html
+++ b/snake.html
@@ -32,18 +32,16 @@
 			<a href="index.html">Goober</a>
 			<a href="alsogoobers.html">Also Goober</a>
 			<a href="tetrispage.html">Tetris</a>
-			<a href="snake.html">Snake</a>
-			<a href="pacman.html">Pacman</a>
-			<a href="pokemon.html">PokemonFR</a>
 			<a href="fontsize.html">Fish</a>
 			<a href="bee.html">Bee</a>
 </div>
 
 <div id="main">
-	<article>
-		<p><iframe src="tetris.html" width="500px"; height="640px" style="margin-left: auto;margin-right: auto;"></iframe></p>
-	</article>
+			<article>
+					<p><iframe src="snakecode.html" width="630px"; height="630px" style="margin-left: auto;margin-right: auto;"></iframe></p>
+			</article>
 </div>
+
 
 <script>
 function openNav() {
@@ -58,9 +56,6 @@ function closeNav() {
 </script>
 </body>
 
-<footer>
-  <p>Goobers have stopped here :3</p>
-</footer>
 
 
 
