--- a/goobers.html
+++ b/goobers.html
@@ -60,6 +60,13 @@
 						<img src="yippee.png" alt="tbh" class="latestVideoEmbed" vnum='2' cid="UCScq_TZu8x-Zpa4w7dSIkHg" width="348" height="336" frameborder="0" allowfullscreen></img>
 					</div>
 				</div>
+				<div class="column">
+					<div class="card">
+						<a href="boyo.html">
+						<img src="IMG_20220516_110348_817.jpg" alt="Boyo" class="latestVideoEmbed" vnum='0' cid="UCScq_TZu8x-Zpa4w7dSIkHg" width="348" height="336" frameborder="0" allowfullscreen></img>
+						</a>
+					</div>
+				</div>
 			</div> 
 		</section>
 	</article>
