--- a/pokemon.html
+++ b/pokemon.html
@@ -38,7 +38,7 @@
 
 <div id="main">
 			<article>
-					<p><iframe src="https://mkgamesdev.github.io/MKGBA2.0/launcher.html#pokemonred" width="480px"; height="320px" style="margin-left: auto;margin-right: auto;"></iframe></p>
+					<p style="margin-left: auto;margin-right: auto;"><iframe src="https://mkgamesdev.github.io/MKGBA2.0/launcher.html#pokemonred" width="960px"; height="640px" style="margin-left: auto;margin-right: auto;"></iframe></p>
 			</article>
 </div>
 
