--- a/index.html
+++ b/index.html
@@ -6,8 +6,15 @@
 <link rel="stylesheet" href="w3.css">
 <link rel="stylesheet" href="https://use.typekit.net/jgn6mct.css">
 <link rel="stylesheet" href="styles.css"> 
+<link rel="apple-touch-icon" sizes="60x60" href="/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="manifest" href="/site.webmanifest">
+<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
 <title> Hey guys!! </title>
 <meta charset="utf-8">
+<meta name="msapplication-TileColor" content="#da532c">
+<meta name="theme-color" content="#ffffff">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="This is a web page about goobers">
 <meta name="keywords" content="goober, auston, austonbluboy, qwertyuiopasdfghjklzxcvbnm, kdfsjleaiownafd, hjkaueia, uieabneyian, gihodg, lfdsafjldksa, fjdkfjkdjfkd" />
